# rattle-compiler

./: .gitignore  .gitmodules  .nvimrc  CMakeLists.txt  README.md  build  build.sh  git
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml
examples/: concept.rattle  fib.rattle  fib.ty  generics.rattle  hello_world.rattle  struct.rattle
flowcharts/: Untitled Diagram.drawio
src/: AST.cpp  AST.hpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  lexer.c  lexer.cpp  main.c  main.cpp  main.s  rattle.cpp  token.c  token.cpp  tpython.c
src/AST/: ASTExpression.cpp  ASTExpression.hpp  ASTProgram.cpp  ASTProgram.hpp  ASTStatement.cpp  ASTStatement.hpp  ASTType.cpp  ASTType.hpp  CMakeLists.txt
src/include/: Compiler.hpp  Token.hpp  lexer.h  lexer.hpp  rattle.hpp  token.h  token.hpp  tpython.h
src/lib/: CMakeLists.txt  utils.c  vector.c
src/lib/include/: utils.h  vector.h
src/lib/utils/: CMakeLists.txt  utils.c  utils.cpp  utils.hpp
